--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Robot Framework Keyword Hub</title>
-    <link rel="icon" href="/data/robot-logo.png" type="image/png">
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="icon" href="./data/robot-logo.png" type="image/png">
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
     <nav class="navbar">
         <div class="nav-container">
             <a href="index.html" class="logo">
-                <img src="/data/robot-logo.png" alt="Logo" class="logo-icon">
+                <img src="./data/robot-logo.png" alt="Logo" class="logo-icon">
                 <span>Keyword Hub</span>
             </a>
             <div class="nav-links">
@@ -61,6 +61,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
-    <script src="/js/search.js"></script>
+    <script src="./js/search.js"></script>
 </body>
 </html>
